# visualization.goom-pp

./: .clang-format-ignore  .clang-tidy  goom-spell.dic
depends/goom-libs/lib/mdspan/: mdspan.hpp
depends/goom-libs/src/goom/: CMakeLists.txt
depends/goom-libs/src/goom/include/goom/: debug_with_println.h  frame_data.cppm  frame_data.h  goom_graphic.cppm  goom_lerp_data.h  point2d.cppm  sound_info.cppm
depends/goom-libs/src/goom/src/: goom_control.cpp  sound_info.cpp
depends/goom-libs/src/goom/src/color/: color_maps.cpp  color_maps_grids.cpp
depends/goom-libs/src/goom/src/color/color_data/: color_data_maps.cpp  create_colormaps.py  get_palettable_cmaps.py
depends/goom-libs/src/goom/src/control/: all_standard_visual_fx.cppm  goom_all_visual_fx.cppm  goom_message_displayer.h  goom_music_settings_reactor.cpp  goom_music_settings_reactor.h  goom_random_state_handler.cpp  goom_state_monitor.cpp  goom_state_monitor.cppm  goom_title_displayer.cppm  state_and_filter_consts.cppm  visual_fx_weighted_color_maps.cppm
depends/goom-libs/src/goom/src/control/goom_drawable_states/: goom_drawables_data.cpp  goom_favourite_states_handler.cpp  goom_forced_state_handler.cpp
depends/goom-libs/src/goom/src/draw/: goom_draw_to_container.cppm
depends/goom-libs/src/goom/src/draw/shape_drawers/: bitmap_drawer.cpp  line_drawer_moving_noise.cpp
depends/goom-libs/src/goom/src/filter_fx/: common_types.cppm  filter_buffer_striper.cpp  filter_buffer_striper.h  filter_buffers.cpp  filter_buffers.h  filter_buffers_service.cpp  filter_buffers_service.cppm  filter_buffers_service.h  filter_consts.cppm  filter_modes.cppm  filter_settings.cppm  filter_settings.h  filter_settings_service.cpp  filter_settings_service.cppm  filter_settings_service.h  filter_weights.cppm  filter_zoom_vector.cpp  normalized_coords.cppm  zoom_vector.cppm
depends/goom-libs/src/goom/src/filter_fx/after_effects/: after_effects_states.cpp  after_effects_states.h
depends/goom-libs/src/goom/src/filter_fx/after_effects/the_effects/: hypercos.cpp  image_velocity.cpp  planes.cpp  rotation.cpp
depends/goom-libs/src/goom/src/filter_fx/filter_effects/: zoom_adjustment_effect_factory.cpp  zoom_vector_effects.cpp  zoom_vector_effects.cppm
depends/goom-libs/src/goom/src/filter_fx/filter_effects/adjustment_effects/: amulet.h  complex_utils.cpp  complex_utils.h  crystal_ball.cppm  crystal_ball.h  distance_field.cpp  distance_field.cppm  distance_field.h  exp_reciprocal.cpp  exp_reciprocal.h  flow_field.cpp  flow_field.cppm  image_zoom_adjustment.cpp  image_zoom_adjustment.h  julia.cpp  mobius.cpp  mobius.h  scrunch.cppm  scrunch.h  speedway.cppm  speedway.h  uniform_zoom_adjustment_effect.h  wave.h  y_only.cppm  y_only.h
depends/goom-libs/src/goom/src/filter_fx/gpu_filter_effects/: amulet.cpp  amulet.cppm  beautiful_field.cpp  beautiful_field.cppm  gpu_lerp_factor.cpp  gpu_lerp_factor.cppm  gpu_zoom_filter_effect.cpp  gpu_zoom_filter_effect.cppm  gpu_zoom_filter_effect_factory.cpp  gpu_zoom_filter_effect_factory.cppm  none.cppm  reflecting_pool.cpp  reflecting_pool.cppm  up_down.cpp  up_down.cppm  vortex.cpp  vortex.cppm  wave.cpp  wave.cppm
depends/goom-libs/src/goom/src/utils/: array_utils.cppm  name_value_pairs.cppm  timer.h
depends/goom-libs/src/goom/src/utils/graphics/: bezier_drawer.cpp  blend2d_to_goom.cppm  blend2d_utils.cpp  small_image_bitmaps.cppm  test_patterns.cpp
depends/goom-libs/src/goom/src/utils/math/: goom_rand.cppm  incremented_values.cppm  lerper.cppm  parametric_functions2d.cpp
depends/goom-libs/src/goom/src/visual_fx/: circles_fx.cpp  flying_stars_fx.cpp  goom_dots_fx.cpp  image_fx.cpp  l_system_fx.cpp  raindrops_fx.cpp  shader_fx.cpp  shapes_fx.cpp  tentacles_fx.cpp  tubes_fx.cpp
depends/goom-libs/src/goom/src/visual_fx/circles/: bitmap_getter.cppm  circle.cppm
depends/goom-libs/src/goom/src/visual_fx/flying_stars/: star_colors.cpp  star_colors.cppm  star_drawer.cppm  star_types_container.cpp
depends/goom-libs/src/goom/src/visual_fx/ifs/: fractal.cppm  low_density_blurrer.cppm
depends/goom-libs/src/goom/src/visual_fx/l_systems/: l_system.cpp  l_system.cppm  l_system.h  line_drawer_manager.h  lsys_geom.cpp  lsys_geom.h  lsys_paths.cppm
depends/goom-libs/src/goom/src/visual_fx/lines/: line_morph.cppm
depends/goom-libs/src/goom/src/visual_fx/particles/: attractor_effect.cpp
depends/goom-libs/src/goom/src/visual_fx/raindrops/: raindrops.cppm
depends/goom-libs/src/goom/src/visual_fx/shaders/: chroma_factor_lerper.cpp  chroma_factor_lerper.h  color_multiplier_lerper.cpp  color_multiplier_lerper.h  high_contrast.cpp  high_contrast.cppm  high_contrast.h  hue_shift_lerper.cpp  hue_shift_lerper.cppm  hue_shift_lerper.h
depends/goom-libs/src/goom/src/visual_fx/shapes/: shape_parts.cpp  shape_parts.h  shapes.cppm
depends/goom-libs/src/goom/src/visual_fx/tentacles/: tentacle_plotter.cppm
depends/goom-libs/src/goom/src/visual_fx/tubes/: tube_data.h  tubes.cpp
depends/goom-libs/src/tests/: CMakeLists.txt
depends/goom-libs/src/tests/src/: test_lerp_data.cpp
depends/goom-libs/src/tests/src/color/: test_color_utils.cpp
depends/goom-libs/src/tests/src/filters/: test_filter_buffers.cpp  test_filter_zoom_vector.cpp  test_normalized_coords.cpp
depends/goom-libs/src/tests/src/utils/: test_timer.cpp
depends/goom-libs/src/tests/src/utils/math/: test_goom_rand.cpp
docker-toolchains/: Dockerfile
dockerize-kodi-goom/: Dockerfile  build-all.sh
scripts/: goom-clang-tidy-with-docker-toolchain.sh  goom-clang-tidy.sh  goom-docker-get-paths.sh  goom-get-vars.sh
src/: displacement_filter.cpp  displacement_filter.cppm  displacement_filter.h  gl_2d_textures.cppm  gl_2d_textures.h  glsl_program.cpp  glsl_program.cppm  goom_visualization.cpp  goom_visualization.cppm  slot_producer_consumer.cppm
visualization.goom-pp/resources/data/shaders/GL/: filter.vert  pass1_gpu_filter_effects.frag  pass1_gpu_filter_effects.fs  pass1_gpu_filter_effects_consts.h  pass1_gpu_filter_effects_consts.h_glsl  pass1_update_filter_buff1_and_buff3.frag  pass1_update_filter_buff1_and_buff3.fs  pass2_lum_histogram.comp  (+11 more)
